kube-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: donorbuddy
spec:
  containers:
  - name: donorbuddy
    image: buildleft/donorbuddy
