kube-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: donorbuddy
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: donorbuddy
    spec:
      containers:
      - name: donorbuddy
        image: buildleft/donorbuddy
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: donorbuddy
spec:
  type: LoadBalancer
  selector:
    app: donorbuddy
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
