kube-service.yml
kind: Service
apiVersion: v1
metadata:
  name: donorbuddy
spec:
  type: LoadBalancer
  selector:
    app: donorbuddy
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
